--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,1 +1,27 @@
 // place your custom styles here
+.vp-sidebar-header {
+  padding: 0.5rem 0.5rem;
+}
+
+.vp-sidebar-link {
+  font-size: .875rem;
+  line-height: 1.5rem;
+  padding: 0.5rem 0.5rem;
+}
+
+.vp-sidebar-link.active {
+  background-color: transparent;
+}
+
+@media (min-width: 1440px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
+th, td {
+  padding: 0.3em 0.6em;
+  border: 1px solid var(--vp-c-border-hard, #d1d4d7);
+  transition: border-color var(--vp-t-color);
+}
+
