--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -4,4 +4,5 @@ $theme-color: #B91818;
 :root {
   --content-width: 800px;
   --vp-font: "PingFang", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", STHeiti, "Microsoft YaHei", SimSun, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --vp-c-border-hard: #dcdfe6;
 }
