--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -27,8 +27,24 @@
 }
 
 th, td {
-  padding: 0.3em 0.6em;
+  padding: 0.5em 0.6em;
   border: 1px solid var(--vp-c-border-hard, #d1d4d7);
+  border-right: none;
+  border-left: none;
   transition: border-color var(--vp-t-color);
 }
 
+th {
+  font-weight: 600;
+  color: #000;
+}
+
+table,tbody,thead {
+  width: 100%;
+  line-height: 1.5rem;
+}
+
+tbody tr:nth-child(odd) {
+  background: #fff;
+  // transition: background-color var(--vp-t-color);
+}
