--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -13,6 +13,10 @@
   // background-color: transparent;
 }
 
+.vp-sidebar > .vp-sidebar-links > li > .vp-sidebar-link {
+  font-size: 16px;
+}
+
 @font-face {
 
   font-family: PingFang; /* 自定义字体名称 */
